--- a/Project Altis/Base.lproj/Main.storyboard
+++ b/Project Altis/Base.lproj/Main.storyboard
@@ -672,10 +672,10 @@
                     <window key="window" title="Project Altis" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" animationBehavior="default" id="IQv-IB-iLA">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-                        <rect key="contentRect" x="396" y="204" width="751" height="500"/>
+                        <rect key="contentRect" x="65" y="26" width="1000" height="666"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
-                        <value key="minSize" type="size" width="751" height="500"/>
-                        <value key="maxSize" type="size" width="751" height="500"/>
+                        <value key="minSize" type="size" width="1000" height="666"/>
+                        <value key="maxSize" type="size" width="1000" height="500"/>
                     </window>
                     <connections>
                         <segue destination="XfG-lQ-9wD" kind="relationship" relationship="window.shadowedContentViewController" id="cq2-FE-JQM"/>
@@ -690,16 +690,16 @@
             <objects>
                 <viewController title="Project Altis" id="XfG-lQ-9wD" customClass="ViewController" customModule="Project_Altis" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="751" height="500"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="666"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <imageView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AN0-at-xzR">
-                                <rect key="frame" x="0.0" y="0.0" width="751" height="500"/>
+                                <rect key="frame" x="0.0" y="0.0" width="1000" height="666"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" animates="YES" imageScaling="proportionallyDown" image="Brrrgh" id="pcP-BK-QfH"/>
+                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" animates="YES" imageScaling="proportionallyDown" id="pcP-BK-QfH"/>
                             </imageView>
                             <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="weu-rE-ZY6">
-                                <rect key="frame" x="644" y="0.0" width="78" height="38"/>
+                                <rect key="frame" x="869" y="3" width="90" height="41"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="credits" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="mGi-tw-xSy">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -710,7 +710,7 @@
                                 </connections>
                             </button>
                             <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZUq-mg-5ah">
-                                <rect key="frame" x="523" y="0.0" width="78" height="38"/>
+                                <rect key="frame" x="678" y="3" width="90" height="41"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="options" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="jNy-gi-35N">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -721,7 +721,7 @@
                                 </connections>
                             </button>
                             <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fYl-EO-Gqg">
-                                <rect key="frame" x="272" y="0.0" width="78" height="38"/>
+                                <rect key="frame" x="344" y="3" width="90" height="41"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="group" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="tVM-rk-Ry2">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -732,7 +732,7 @@
                                 </connections>
                             </button>
                             <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HLQ-yX-GQ6">
-                                <rect key="frame" x="617" y="220" width="94" height="18"/>
+                                <rect key="frame" x="829" y="297" width="94" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <buttonCell key="cell" type="check" title="Save login" bezelStyle="regularSquare" imagePosition="left" inset="2" id="HFW-jC-MNj">
                                     <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -740,7 +740,7 @@
                                 </buttonCell>
                             </button>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BHF-au-iAd">
-                                <rect key="frame" x="393" y="257" width="70" height="17"/>
+                                <rect key="frame" x="551" y="333" width="69" height="18"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Username:" id="Sti-ff-ldF">
                                     <font key="font" metaFont="system"/>
@@ -748,8 +748,8 @@
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="phO-jb-02E">
-                                <rect key="frame" x="395" y="225" width="66" height="17"/>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="NO" preferredMaxLayoutWidth="52" translatesAutoresizingMaskIntoConstraints="NO" id="phO-jb-02E">
+                                <rect key="frame" x="554" y="309" width="63" height="17"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Password:" id="BfI-jp-JZw">
                                     <font key="font" metaFont="system"/>
@@ -758,7 +758,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="veZ-mE-vRs">
-                                <rect key="frame" x="469" y="252" width="142" height="22"/>
+                                <rect key="frame" x="622" y="332" width="201" height="20"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="I1J-V7-R7L">
                                     <font key="font" metaFont="system"/>
@@ -767,7 +767,7 @@
                                 </textFieldCell>
                             </textField>
                             <secureTextField verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qpY-st-yYg">
-                                <rect key="frame" x="469" y="222" width="142" height="22"/>
+                                <rect key="frame" x="622" y="306" width="201" height="20"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <secureTextFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" usesSingleLineMode="YES" id="GnB-nG-bEL">
                                     <font key="font" metaFont="system"/>
@@ -779,7 +779,7 @@
                                 </secureTextFieldCell>
                             </secureTextField>
                             <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gb9-BP-TkI">
-                                <rect key="frame" x="619" y="239" width="90" height="48"/>
+                                <rect key="frame" x="831" y="316" width="90" height="41"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="play" imagePosition="only" alignment="center" alternateImage="play_h" imageScaling="proportionallyUpOrDown" inset="2" id="HwT-Ju-689">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -790,7 +790,7 @@
                                 </connections>
                             </button>
                             <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CFJ-fv-sh9">
-                                <rect key="frame" x="20" y="0.0" width="78" height="38"/>
+                                <rect key="frame" x="26" y="3" width="90" height="41"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="website" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="d7F-Qc-F9P">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -801,7 +801,7 @@
                                 </connections>
                             </button>
                             <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="J4b-Tt-o8x">
-                                <rect key="frame" x="146" y="0.0" width="78" height="38"/>
+                                <rect key="frame" x="171" y="3" width="90" height="41"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="discord" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="s1f-V9-Den">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -812,7 +812,7 @@
                                 </connections>
                             </button>
                             <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Q0U-ud-gC9">
-                                <rect key="frame" x="397" y="0.0" width="78" height="38"/>
+                                <rect key="frame" x="515" y="3" width="90" height="41"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="theme" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="RO1-ym-5mW">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -824,23 +824,50 @@
                                 </connections>
                             </button>
                             <webView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XIz-8y-Zbe">
-                                <rect key="frame" x="37" y="57" width="313" height="382"/>
+                                <rect key="frame" x="46" y="76" width="427" height="511"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <webPreferences key="preferences" defaultFontSize="16" defaultFixedFontSize="13" minimumFontSize="0">
                                     <nil key="identifier"/>
                                 </webPreferences>
                             </webView>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="10o-c4-Il0">
+                                <rect key="frame" x="550" y="264" width="345" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" placeholderString="" id="FRN-8T-c2h">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ysp-JL-qKt">
+                                <rect key="frame" x="551" y="365" width="344" height="24"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" id="ohx-4Q-vu6">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <progressIndicator wantsLayer="YES" fixedFrame="YES" maxValue="100" style="bar" translatesAutoresizingMaskIntoConstraints="NO" id="7Dv-3i-pEA">
+                                <rect key="frame" x="556" y="352" width="365" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                            </progressIndicator>
                         </subviews>
                     </view>
                     <connections>
                         <outlet property="BackgroundImage" destination="pcP-BK-QfH" id="VEL-JT-5PU"/>
+                        <outlet property="DownloadInfo" destination="Ysp-JL-qKt" id="TG9-hm-GMg"/>
+                        <outlet property="DownloadProgress" destination="7Dv-3i-pEA" id="4g5-yf-Azj"/>
+                        <outlet property="LoginInfo" destination="10o-c4-Il0" id="Jia-qZ-dLH"/>
+                        <outlet property="PasswordField" destination="qpY-st-yYg" id="a5Y-EK-3jz"/>
                         <outlet property="PlayButton" destination="gb9-BP-TkI" id="hfi-yI-NQs"/>
+                        <outlet property="UsernameField" destination="veZ-mE-vRs" id="xZq-ge-Z6S"/>
                         <outlet property="WebView" destination="XIz-8y-Zbe" id="bJt-VQ-xvO"/>
                     </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="74.5" y="858"/>
+            <point key="canvasLocation" x="74" y="858"/>
         </scene>
         <!--Change Theme-->
         <scene sceneID="2p5-4P-H1P">
@@ -937,11 +964,10 @@
                 <customObject id="ats-cn-ul2" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
                 <userDefaultsController representsSharedInstance="YES" id="bol-iN-CKk"/>
             </objects>
-            <point key="canvasLocation" x="-93" y="1399"/>
+            <point key="canvasLocation" x="-199" y="1477"/>
         </scene>
     </scenes>
     <resources>
-        <image name="Brrrgh" width="750.10467529296875" height="499.5697021484375"/>
         <image name="credits" width="90" height="41"/>
         <image name="discord" width="90" height="41"/>
         <image name="group" width="90" height="41"/>
