--- a/Project Altis/Base.lproj/Main.storyboard
+++ b/Project Altis/Base.lproj/Main.storyboard
@@ -842,12 +842,12 @@
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
-                            <progressIndicator wantsLayer="YES" fixedFrame="YES" maxValue="100" style="bar" translatesAutoresizingMaskIntoConstraints="NO" id="7Dv-3i-pEA">
-                                <rect key="frame" x="556" y="351" width="365" height="22"/>
+                            <progressIndicator wantsLayer="YES" fixedFrame="YES" maxValue="100" displayedWhenStopped="NO" style="bar" translatesAutoresizingMaskIntoConstraints="NO" id="7Dv-3i-pEA">
+                                <rect key="frame" x="556" y="351" width="365" height="20"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             </progressIndicator>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ysp-JL-qKt">
-                                <rect key="frame" x="566" y="365" width="344" height="24"/>
+                                <rect key="frame" x="566" y="359" width="344" height="24"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" id="ohx-4Q-vu6">
                                     <font key="font" metaFont="system"/>
